# rust-kata-002

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: build_images.yml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
src/: crates_io.rs  errors.rs  lib.rs  main.rs  models.rs  proxy.rs
src/crates_io/: get_crate.rs  get_crate_dependencies.rs  get_dependencies.rs  mod.rs
src/dependency_graph/: endpoints.rs  mod.rs  models.rs
src/dependency_graph/routes/: mod.rs  query.rs
src/health/: README.md  checkers.rs  endpoints.rs  envelope.rs  mod.rs  models.rs  routes.rs
src/health/routes/: get.rs  liveliness.rs  mod.rs  readiness.rs
src/interfaces/: crate_registry.rs  http.rs  mod.rs
src/observability/: checkers.rs  endpoints.rs  metrics.rs  middleware.rs  mod.rs  models.rs
src/proxy/: endpoints.rs
tests/: dependency_graph_query.rs  health_liveliness.rs  health_liveness.rs
tests/fixtures/: get_crate_dependencies_rand_0.8.2.json  get_crates_actix_web.json  get_crates_funny.json  get_crates_rand.json  get_crates_serde.json  get_crates_syn.json  get_crates_tokio.json
