[package]
name = "rust-kata-002"
version = "0.1.0"
authors = ["agabani <agabani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
chrono = "0.4.19"
env_logger = "0.8.2"
serde = "1.0.118"

[dev-dependencies]
actix-rt = "2.0.0-beta.1"
